--- a/src/app.css
+++ b/src/app.css
@@ -137,6 +137,7 @@ body {
   margin: 0;
   padding: 0;
   background: var(--bg-secondary);
+  color: var(--fg-primary);
   font-size: 16px;
   overflow-y: scroll;
 }
