feat: added mode toggle css transition

--- a/src/app.css
+++ b/src/app.css
@@ -216,8 +216,8 @@ button {
   &.selected {
     background: var(--el-bg-selected);
     /* outline: var(--el-outline-width-selected) solid
-      var(--el-outline-color-selected);
-    box-shadow: var(--el-box-shadow-selected); */
+      var(--el-outline-color-selected); */
+    /* box-shadow: var(--el-box-shadow-selected); */
   }
 }
 
