--- a/src/lib/components/heatmap/heatmap.css
+++ b/src/lib/components/heatmap/heatmap.css
@@ -78,3 +78,17 @@ tbody th {
   text-align: right;
   padding: 0 0.25rem 0 0;
 }
+
+:popover-open {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  & .moment {
+    color: var(--fg-secondary);
+  }
+  & .count {
+    font-weight: 600;
+    color: var(--fg-primary);
+  }
+}
